--- a/Projects/Excersise/Ultraedit Navbar clone/style.css
+++ b/Projects/Excersise/Ultraedit Navbar clone/style.css
@@ -62,58 +62,62 @@ nav {
 }
 
 .mainbody {
-    margin: 62px;
-    padding: 45px;
+
+    /* margin: 30px; */
+    /* padding: 27px; */
+    max-width: 68vw;
+    margin: auto;
 }
 
 .cards {
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-content: flex-end;
     flex-wrap: wrap;
     margin-left: 130px;
     font-size: 50px;
+}
+.cards2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 12px; 
+    /* justify-content: space-around; */
+}
+.items{
+    padding: 23px 71px;
+    background: #f9f9f9;
+    /* border-radius: 12px; */
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+
 
 }
-
-.cards2 {
+.button{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-content: space-around;
-
-    flex-wrap: wrap;
-}
-
-.items {
-    display: flex;
-    border: 0px solid black;
-    height: 190px;
-    width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #25cd25;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
     align-items: center;
-    justify-content: space-around;
-    background-color: rgba(212, 206, 206, 0.68);
 
-
-
-
+    flex-wrap: wrap;
+    /* background-color: aqua; */
 }
 
-
-.cards3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 40px;
+.itemlang{
+    padding-bottom: 42px;
+    padding-top: 0px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.cards4 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 40px;
+@media screen and (max-width: 1000px) {
+    .mainbody{ 
+        display: grid;
+        grid-template-columns: 1fr; 
+    }
 }
